tests/bad/testSyntaxConstWithAssign.grc
// Error: Expected ':=' after identifier 'x' in declaration
const x = 10 